# c-marpaESLIFCsharp

./: .gitignore  CMakeLists.txt
ConsoleApp/: CMakeLists.txt  Program.cs
cmake/: get_SIZEOF_MARPAESLIF_LONG_LONG.cmake  get_marpaESLIF_offsetof.cmake
dotnet/: CMakeLists.txt  Directory.Build.props.in  marpaESLIFCsharp.DotnetNative.runtime.csproj.in
dotnet/genericLoggerCopy/: CMakeLists.txt
dotnet/marpaESLIFCopy/: CMakeLists.txt
genericLoggerCopy/: CMakeLists.txt
include/: marpaESLIF_wrapper.h
marpaESLIFCopy/: CMakeLists.txt
marpaESLIF_wrapper/: CMakeLists.txt
marpaESLIF_wrapper/cmake/: get_SIZEOF_ENUM.cmake  get_SIZEOF_MARPAESLIF_LONG_LONG.cmake  get_marpaESLIF_offsetof.cmake
marpaESLIF_wrapper/include/: marpaESLIF_wrapper.h
marpaESLIF_wrapper/src/: marpaESLIF_wrapper.c
src/: genericLoggerIface.cs  genericLoggerShr.cs  genericLoggerShr.cs.in  marpaESLIF.cs
src/org/parser/marpa/: ESLIF.cs  ESLIFAction.cs  ESLIFActionType.cs  ESLIFEvent.cs  ESLIFEventType.cs  ESLIFException.cs  ESLIFGrammar.cs  ESLIFGrammarDefaults.cs  ESLIFGrammarProperties.cs  ESLIFGrammarRuleProperties.cs  ESLIFGrammarSymbolProperties.cs  ESLIFJSON.cs  ESLIFJSONDecoder.cs  ESLIFJSONDecoderOption.cs  ESLIFJSONEncoder.cs  ESLIFLoggerInterface.cs  ESLIFLoggerLevel.cs  ESLIFLuaFunction.cs  ESLIFMultitonNullLogger.cs  ESLIFProgress.cs  ESLIFRecognizer.cs  ESLIFRecognizerInterface.cs  ESLIFRecognizerString.cs  ESLIFRegexCallout.cs  ESLIFRulePropertyBitSet.cs  ESLIFSymbol.cs  ESLIFSymbolEventBitSet.cs  ESLIFSymbolPropertyBitSet.cs  ESLIFSymbolType.cs  ESLIFValue.cs  ESLIFValueInterface.cs  IESLIFRecognizer.cs  IESLIFValue.cs  Import.cs.in  ImportExport.cs.in  genericLogger.cs  genericLoggerShr.cs.in  marpaESLIF.cs.in  marpaESLIFAction.cs.in  marpaESLIFGrammar.cs.in  (+15 more)
src/org/parser/marpa/dev/: ESLIF.cs  ESLIFEvent.cs  ESLIFException.cs  ESLIFGrammar.cs  ESLIFGrammarRuleProperties.cs  ESLIFGrammarSymbolProperties.cs  ESLIFLoggerInterface.cs  ESLIFLoggerLevel.cs  ESLIFRecognizerInterface.cs  ESLIFValue.cs  ESLIFValueInterface.cs  InstanceHelper.cs
